--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="container">
         <img id="illustration" src="./images/illustration-article.svg" alt="">
         <button type="button">Learning</button>
-        <p id="publish">Published 21 Dec 2023</p>
+        <p class="publish">Published 21 Dec 2023</p>
         <h4>HTML & CSS foundations</h4>
-        <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
+        <p class="content">These languages are the backbone of every website, defining structure, content, and presentation.</p>
         <div class="blogger">
             <img src="./images/image-avatar.webp" alt="">
             <span class="blogger-name">Greg Hooper</span>
